--- a/src/scss/slides.scss
+++ b/src/scss/slides.scss
@@ -34,7 +34,7 @@
 
 .slide__header {
   margin: 0 auto;
-  width: 400px;
+  width: 530px;
   text-align: center;
 }
 
@@ -90,7 +90,7 @@
     padding: 0 20px;
     margin: 0 auto;
     width: auto;
-    max-width: 300px;
+    max-width: 375px;
   }
 
   .slide__title {
